# Prioritize

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: enums.hpp  file_io.hpp  property.hpp  task.hpp  updates.hpp
src/: updates.hpp
